--- a/FACEBU/facebu/.gitignore
+++ b/FACEBU/facebu/.gitignore
@@ -4,6 +4,7 @@
 /dist
 /tmp
 /out-tsc
+
 # Only exists if Bazel was run
 /bazel-out
 
@@ -30,6 +31,7 @@ speed-measure-plugin*.json
 !.vscode/launch.json
 !.vscode/extensions.json
 .history/*
+/FACEBU/facebulocal.code-workspace
 
 # misc
 /.sass-cache
@@ -44,4 +46,6 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
- /FACEBU/facebulocal.code-workspace
+
+# Custom
+/db.json
